sickrage/sickrage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: sickrage
  name: sickrage
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: sickrage
    spec:
      containers:
      - env:
        - name: PGID
        - name: PUID
        image: carlosedp/sickrage
        imagePullPolicy: Always
        name: sickrage
        ports:
        - containerPort: 8081
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: sickrage-config
        - mountPath: /volumes/media
          name: media
      restartPolicy: Always
      volumes:
      - name: sickrage-config
        persistentVolumeClaim:
          claimName: sickrage-config
      - name: media
        nfs:
          server: 192.168.1.56
          path: "/mnt/mediahdd/"
status: {}
